@@ -4,6 +4,7 @@ Changes for 3.4.5
 - Bug Fix (1133) - Fix cdsEzCaRead/Write implementation 
 - Bug Fix (1132) - Increase ADC parser part limit to 6000 
 - Add installer support for kamioka,indigo,anu,uwa,cardiff,bham sites
+- Add awgtpman support for indigo,anu,uwa,cardiff,bham sites
 ==================================================================================================
 Changes for 3.4.4
 ==================================================================================================
